syntax = "proto3";

option go_package = "rpc/greeter";

package greeter;

message HelloRequest {
  string greeting = 1;
}

message HelloResponse {
  string reply = 1;
}

service HelloService{
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc SayHelloAgain (HelloRequest) returns (HelloResponse);
}

service GreetingService{
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc SayHelloAgain (HelloRequest) returns (HelloResponse);
}